--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.0",
+        "php": ">=7.0",
         "illuminate/support": ">=5.5",
         "illuminate/contracts": ">=5.5"
     },
     "require-dev": {
         "phpunit/phpunit": ">=6.0",
-        "orchestra/testbench": "^3.5",
-        "orchestra/database": "^3.5"
+        "orchestra/testbench": ">=3.5",
+        "orchestra/database": ">=3.5"
     },
     "autoload": {
         "psr-4": {
